# urban-sounds-classifier

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  setup.sh  view_dataset.ipynb
data/: fold_values.npy
src/: 01_train_spectrogram_1D_conv_CNN.py  02_preprocess_spectra.py  03_test_spectrogram_transformer_noconv.py  04_train_spectrogram_transformer_noconv.py  04b_train_spectrogram_transformer_noconv.py  dataset.py  utils.py
src/cnn/: dataset.py
src/models/: spectrogram_1D_conv_CNN.py  spectrogram_1D_conv_transformer.py
