[project]
name = "urban-sounds-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.33.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "soundfile>=0.13.1",
    "torch==2.2",
    "tqdm>=4.67.1",
]
